feat: Add POST and DELETE endpoints & swagger open api for discussion
